2/7/2004
	- Add Options.refresh() (based on a patch from Th Kuhne)
	- Add the ResolverConfig class, which is largely based on the
	  FindServer class, except that it's not all static methods.
	  Add the ability to refresh the current ResolverConfig, and
	  make FindServer use ResolverConfig.
	- Add Lookup.refreshDefault (based on a patch from Th Kuhne)

2/4/2004
	- 1.6.5 released.
	- Records of an unknown type and length 0 weren't handled properly.
	  (reported by Olafur Gudmundsson <ogud@ogud.com>)
	- Fixed a bug in $INCLUDE handling.
	  (Christian Sepulveda <christian.sepulveda@nominum.com>)

2/3/2004
	- The Lookup.run() method should be usable more than once on a Lookup
	  object.
	  (reported by Joseph Shraibman <jks@iname.com>)

10/31/2004
	- Add partial IPv6 support to the ReverseMap class.
	  (based on a patch from Th Kuhne)

7/7/2004
	- Implement the $GENERATE master file directive.

6/28/2004
	- Canonicalizing a name created with the Name(Name src, int n)
	  constructor caused an exception.
	  (based on a patch from Nigel Tamplin <nigel@metica.com>)
	- Concatenating names caused an exception when the prefix was created
	  with the Name(Name src, int n) constructor.
	  (reported by Nigel Tamplin <nigel@metica.com>)

6/22/2004
	- The DNSSEC digesting code shouldn't throw ClassCastExceptions.
	  (reported by Mike StJohns <Mike.StJohns@nominum.com>)
	- The label count in a generated SIG/RRSIG record was off by one.
	  (Mike StJohns <Mike.StJohns@nominum.com>)

6/8/2004
	- Rcode 4 is NOTIMP, not NOTIMPL.

6/5/2004
	- Fixes to LOCRecord.

6/3/2004
	- 1.6.4 released.

5/26/2004
	- Properly handle text mnemonics in KEY records.
	- Add support for the APL record type.

5/25/2004
	- Fix a bug where parsing the text format of an NSEC record
	  incorrectly parsed one token too many.

5/18/2004
	- 1.6.3 released.

5/11/2004
	- Don't store the number of labels in a Name in a byte, as the maximum
	  value (128) cannot be stored in a byte.

5/9/2004